Added MD to Og to implement other thermostats

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -200,27 +200,11 @@
       "DScribe is not installed, and therefore you cannot use the DScribe descriptors.\n",
       "WARNING:tensorflow:You are casting an input of type complex64 to an incompatible dtype float32.  This will discard the imaginary part and may not be what you intended.\n",
       "WARNING:tensorflow:You are casting an input of type complex64 to an incompatible dtype float32.  This will discard the imaginary part and may not be what you intended.\n",
-      "WARNING:tensorflow:You are casting an input of type complex64 to an incompatible dtype float32.  This will discard the imaginary part and may not be what you intended.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\abshe\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\ase\\md\\nvtberendsen.py:95: RuntimeWarning: divide by zero encountered in double_scalars\n",
-      "  (self.temperature / old_temperature - 1.0) *\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "WARNING:tensorflow:You are casting an input of type complex64 to an incompatible dtype float32.  This will discard the imaginary part and may not be what you intended.\n",
       "WARNING:tensorflow:You are casting an input of type complex64 to an incompatible dtype float32.  This will discard the imaginary part and may not be what you intended.\n",
       "WARNING:tensorflow:You are casting an input of type complex64 to an incompatible dtype float32.  This will discard the imaginary part and may not be what you intended.\n",
-      "WARNING:tensorflow:You are casting an input of type complex64 to an incompatible dtype float32.  This will discard the imaginary part and may not be what you intended.\n",
-      "Plotting MSD using 10002 images\n",
-      "Diffusion coefficients: ([-1.2150805725235846e-07, 2.83718671597496e-07, -5.388335571575514e-08], [0.0, 0.0, 0.0])\n"
+      "Plotting MSD using 1002 images\n",
+      "Diffusion coefficients: ([8.929355972110487e-05, -6.759250973865885e-07, 4.638191265231533e-06, 1.2941813343037413e-05], [0.0, 0.0, 0.0, 1.6940658945086007e-21])\n"
      ]
     },
     {
@@ -235,8 +219,8 @@
    ],
    "source": [
     "from oganesson.ogstructure import OgStructure\n",
-    "structure = OgStructure(file_name='examples/structures/Li3PO4_mp-13725.cif')\n",
-    "structure.simulate(temperature=1000,steps=10000,loginterval=1)\n",
+    "structure = OgStructure(file_name='examples/structures/LGPS_ChemMater_2018_30_4995_Opt.cif')\n",
+    "structure.simulate(temperature=1000,steps=1000,loginterval=1)\n",
     "coeffs = structure.calculate_diffusivity()\n",
     "print('Diffusion coefficients:', coeffs)\n"
    ]
