--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -103,10 +103,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Generation of machine learning datasets"
    ]
