--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -1,83 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from oganesson.descriptors import BACD, SymmetryFunctions, DScribeSOAP, DScribeSineMatrix\n",
-    "from oganesson.ogstructure import OgStructure\n",
-    "\n",
-    "\n",
-    "bacd = BACD(OgStructure(file_name='examples/structures/mp-541001_LiInI4.cif'))\n",
-    "bacd.describe()\n",
-    "\n",
-    "sf = DScribeSineMatrix(OgStructure(file_name='examples/structures/mp-541001_LiInI4.cif'))\n",
-    "sf.describe()\n"
+    "# Structural manipulation and preparation tools"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sf.dscribe.create()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from dscribe.descriptors import SOAP\n",
-    "from ase.build import molecule\n",
-    "\n",
-    "species = [\"H\", \"C\", \"O\", \"N\"]\n",
-    "rcut = 6.0\n",
-    "nmax = 8\n",
-    "lmax = 6\n",
-    "\n",
-    "# Setting up the SOAP descriptor\n",
-    "soap = SOAP(\n",
-    "    species=species,\n",
-    "    periodic=False,\n",
-    "    rcut=rcut,\n",
-    "    nmax=nmax,\n",
-    "    lmax=lmax,\n",
-    ")\n",
-    "water = molecule(\"H2O\")\n",
-    "\n",
-    "# Create SOAP output for the system\n",
-    "soap_water = soap.create(water, positions=[0])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from oganesson.descriptors import BACD, Describe\n",
-    "# from oganesson.descriptors import DScribeSOAP, DscribeACSF\n",
-    "from oganesson.ogstructure import OgStructure\n",
-    "\n",
-    "bacd = BACD(OgStructure(file_name='examples/structures/Li3PO4_mp-13725.cif'))\n",
-    "print(bacd.describe())\n",
-    "# soap = DScribeSOAP(OgStructure(file_name='examples/structures/Li3PO4_mp-13725.cif'))\n",
-    "# acsf = DscribeACSF(OgStructure(file_name='examples/structures/Li3PO4_mp-13725.cif'))\n",
-    "\n",
-    "print(Describe.describe(OgStructure(file_name='examples/structures/Li3PO4_mp-13725.cif'),BACD))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -100,6 +29,51 @@
     "from oganesson.ogstructure import OgStructure\n",
     "og = OgStructure(file_name='examples/structures/Li3PO4_mp-13725.cif')\n",
     "og.generate_neb('Li', r=3)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Machine learning\n",
+    "\n",
+    "## Machine learning descriptors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from oganesson.descriptors import BACD, SymmetryFunctions, DScribeSOAP, DScribeSineMatrix\n",
+    "from oganesson.ogstructure import OgStructure\n",
+    "\n",
+    "\n",
+    "bacd = BACD(OgStructure(file_name='examples/structures/mp-541001_LiInI4.cif'))\n",
+    "bacd.describe()\n",
+    "\n",
+    "sf = DScribeSineMatrix(OgStructure(file_name='examples/structures/mp-541001_LiInI4.cif'))\n",
+    "sf.describe()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from oganesson.descriptors import BACD, Describe\n",
+    "# from oganesson.descriptors import DScribeSOAP, DscribeACSF\n",
+    "from oganesson.ogstructure import OgStructure\n",
+    "\n",
+    "bacd = BACD(OgStructure(file_name='examples/structures/Li3PO4_mp-13725.cif'))\n",
+    "print(bacd.describe())\n",
+    "# soap = DScribeSOAP(OgStructure(file_name='examples/structures/Li3PO4_mp-13725.cif'))\n",
+    "# acsf = DscribeACSF(OgStructure(file_name='examples/structures/Li3PO4_mp-13725.cif'))\n",
+    "\n",
+    "print(Describe.describe(OgStructure(file_name='examples/structures/Li3PO4_mp-13725.cif'),BACD))"
    ]
   },
   {
@@ -153,15 +127,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "\n",
-    "# Test sensitivity of descriptors\n",
+    "## Test sensitivity of descriptors\n",
     "\n",
-    "# Test translational and rotational symmetry of descriptors\n"
+    "## Test translational and rotational symmetry of descriptors\n"
    ]
   },
   {
@@ -181,47 +154,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Performing AIMD simulations\n",
+    "# Performing AIMD simulations\n",
     "\n",
     "Here we apply a lithium-rich material, Li3PO4, to a temperature of 1000 K, and then calculate the diffusivities of the three elements."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GPAW is not installed, and therefore you cannot use the ROSA descriptors.\n",
-      "DScribe is not installed, and therefore you cannot use the DScribe descriptors.\n",
-      "WARNING:tensorflow:You are casting an input of type complex64 to an incompatible dtype float32.  This will discard the imaginary part and may not be what you intended.\n",
-      "WARNING:tensorflow:You are casting an input of type complex64 to an incompatible dtype float32.  This will discard the imaginary part and may not be what you intended.\n",
-      "WARNING:tensorflow:You are casting an input of type complex64 to an incompatible dtype float32.  This will discard the imaginary part and may not be what you intended.\n",
-      "WARNING:tensorflow:You are casting an input of type complex64 to an incompatible dtype float32.  This will discard the imaginary part and may not be what you intended.\n",
-      "WARNING:tensorflow:You are casting an input of type complex64 to an incompatible dtype float32.  This will discard the imaginary part and may not be what you intended.\n",
-      "Plotting MSD using 1002 images\n",
-      "Diffusion coefficients: ([8.929355972110487e-05, -6.759250973865885e-07, 4.638191265231533e-06, 1.2941813343037413e-05], [0.0, 0.0, 0.0, 1.6940658945086007e-21])\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 1500x1000 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from oganesson.ogstructure import OgStructure\n",
     "structure = OgStructure(file_name='examples/structures/LGPS_ChemMater_2018_30_4995_Opt.cif')\n",
     "structure.simulate(temperature=1000,steps=1000,loginterval=1)\n",
     "coeffs = structure.calculate_diffusivity()\n",
     "print('Diffusion coefficients:', coeffs)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Genetic algorithms\n",
+    "\n",
+    "## Creating a population of materials, and performing evolutions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from oganesson.genetic_algorithms import GA\n",
+    "ga = GA(species=['Na']*4 + ['H']*4)\n",
+    "for i in range(10):\n",
+    "    ga.evolve()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evolving based on a given population"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from oganesson.genetic_algorithms import GA\n",
+    "from oganesson.ogstructure import OgStructure\n",
+    "from ase.build import bulk\n",
+    "\n",
+    "Cu = bulk('Cu', 'fcc', a=3.6)\n",
+    "structure = OgStructure(Cu.repeat([2,2,2]))\n",
+    "print(structure())\n",
+    "ga = GA(population=structure.substitutions('Cu',{'Fe':4,'Cu':4}))\n",
+    "for i in range(10):\n",
+    "    ga.evolve()"
    ]
   },
   {
@@ -248,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
