Added random substitution to OgStructure

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -32,6 +32,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from oganesson.genetic_algorithms import GA\n",
+    "from oganesson.ogstructure import OgStructure\n",
+    "from ase.build import bulk\n",
+    "\n",
+    "Cu = bulk('Cu', 'fcc', a=3.6)\n",
+    "structure = OgStructure(Cu.repeat([4,4,4]))\n",
+    "structure.substitutions_random('Cu',{'Al':16, 'Cr':16, 'Ti':16, 'V':16})\n",
+    "structure()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
