--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -143,6 +143,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPAW is not installed, and therefore you cannot use the ROSA descriptors.\n",
+      "DScribe is not installed, and therefore you cannot use the DScribe descriptors.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from oganesson.io.vasp import Outcar\n",
+    "\n",
+    "outcar = Outcar('examples/')\n",
+    "outcar.write_md_data()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -260,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
