--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -48,6 +48,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculation of the RDF of a structure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.         10.79002626  0.          0.\n",
+      "  0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.          0.          2.03685262\n",
+      "  0.44268632  0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from oganesson.ogstructure import OgStructure\n",
+    "from ase.build import bulk\n",
+    "\n",
+    "Cu = bulk('Cu', 'fcc', a=3.6)\n",
+    "structure = OgStructure(Cu.repeat([4,4,4]))\n",
+    "structure.substitutions_random('Cu',{'Al':16, 'Cr':16, 'Ti':16, 'V':16})\n",
+    "print(structure.get_rdf(rmax=4,nbins=100,elements=[13,13])[0])"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
