--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -56,33 +56,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0.          0.          0.          0.          0.          0.\n",
-      "  0.          0.          0.          0.          0.          0.\n",
-      "  0.          0.          0.          0.          0.          0.\n",
-      "  0.          0.          0.          0.          0.          0.\n",
-      "  0.          0.          0.          0.          0.          0.\n",
-      "  0.          0.          0.          0.          0.          0.\n",
-      "  0.          0.          0.          0.          0.          0.\n",
-      "  0.          0.          0.          0.          0.          0.\n",
-      "  0.          0.          0.          0.          0.          0.\n",
-      "  0.          0.          0.          0.          0.          0.\n",
-      "  0.          0.          0.         10.79002626  0.          0.\n",
-      "  0.          0.          0.          0.          0.          0.\n",
-      "  0.          0.          0.          0.          0.          0.\n",
-      "  0.          0.          0.          0.          0.          0.\n",
-      "  0.          0.          0.          0.          0.          2.03685262\n",
-      "  0.44268632  0.          0.          0.          0.          0.\n",
-      "  0.          0.          0.          0.        ]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from oganesson.ogstructure import OgStructure\n",
     "from ase.build import bulk\n",
@@ -263,6 +239,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Surface science"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ase.build import fcc111, add_adsorbate\n",
+    "from ase import Atoms\n",
+    "from ase.constraints import FixAtoms\n",
+    "from ase.build import molecule\n",
+    "from oganesson.ogstructure import OgStructure\n",
+    "CO = molecule('CO')\n",
+    "E_CO = -14.77576957\n",
+    "\n",
+    "Pt = fcc111('Pt', (2, 2, 6),periodic=True)\n",
+    "Pt.write('Pt.cif')\n",
+    "# fixed = list(range(len(Pt) - 2*4))\n",
+    "# Pt.constraints = [FixAtoms(indices=fixed)]\n",
+    "ogPt = OgStructure(Pt)\n",
+    "ogPt.relax()\n",
+    "E_Pt = ogPt.total_energy\n",
+    "\n",
+    "add_adsorbate(Pt, CO, height=1.0, position='fcc',mol_index=0)\n",
+    "Pt.center(vacuum=10.0, axis=2)\n",
+    "Pt.write('Pt_CO.cif')\n",
+    "# fixed = list(range(len(Pt) - len(CO) - 2*4))\n",
+    "# Pt.constraints = [FixAtoms(indices=fixed)]\n",
+    "ogPt = OgStructure(Pt)\n",
+    "ogPt.relax()\n",
+    "ogPt.structure.to('Pt_CO_relaxed.cif','cif')\n",
+    "E_Pt_CO = ogPt.total_energy\n",
+    "\n",
+    "# Find the binding energy\n",
+    "print('CO binding energy =',E_Pt_CO - E_Pt - E_CO)\n",
+    "print(E_Pt_CO, E_Pt, E_CO)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -279,9 +299,9 @@
    "outputs": [],
    "source": [
     "from oganesson.genetic_algorithms import GA\n",
-    "ga = GA(species=['Na']*4 + ['H']*4, rmax=5, population_size=10)\n",
+    "ga = GA(species=['Na']*4 + ['H']*4, rmax=20, population_size=10)\n",
     "for i in range(10):\n",
-    "    ga.evolve()"
+    "    ga.evolve(num_offsprings=5)"
    ]
   },
   {
@@ -309,13 +329,6 @@
     "for i in range(10):\n",
     "    ga.evolve()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
