changes to OgStructure

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -22,6 +22,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPAW is not installed, and therefore you cannot use the ROSA descriptors.\n",
+      "DScribe is not installed, and therefore you cannot use the DScribe descriptors.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from oganesson.ogstructure import OgStructure\n",
+    "from ase.build import surface\n",
+    "s = surface('Au', (1, 1, 1), 9)\n",
+    "s.center(vacuum=10, axis=2)\n",
+    "\n",
+    "og=OgStructure(s)\n",
+    "og.add_atom_to_surface('O').structure.to('Au_O.cif','poscar')\n",
+    "\n",
+    "og=OgStructure(s)\n",
+    "ad_structures = og.adsorption_scanner('O')\n",
+    "counter = 0\n",
+    "for s in ad_structures:\n",
+    "    counter += 1\n",
+    "    s().to(str(counter) + '.cif','poscar')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
