--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -5,7 +5,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Structural manipulation and preparation tools"
+    "# Tutorial overview\n",
+    "\n",
+    "## Structural manipulation and preparation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `OgStructure` class enables you to do various structure manuipulation operations:\n",
+    "\n",
+    "- You can adsorb an atom on a surface by simply calling the `add_atom_to_surface(atom)`:"
    ]
   },
   {
@@ -21,19 +32,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GPAW is not installed, and therefore you cannot use the ROSA descriptors.\n",
-      "DScribe is not installed, and therefore you cannot use the DScribe descriptors.\n"
-     ]
-    }
-   ],
+   "source": [
+    "- You can scan for multiple adsorption positions on a surface by using the `adsorption_scanner(atom)` method:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from oganesson.ogstructure import OgStructure\n",
     "from ase.build import surface\n",
@@ -52,6 +61,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- You can add an interstitial defect to a structure by calling the `add_interstitial(atom)`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = OgStructure(file_name='examples/structures/Li3PO4_mp-13725.cif')\n",
+    "s.add_interstitial('H')().to('H_interstitial.cif','cif')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- You can generate the entire VASP input POSCARs for the NEB diffusion pathway of an atom in the structure:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -60,6 +93,13 @@
     "from oganesson.ogstructure import OgStructure\n",
     "og = OgStructure(file_name='examples/structures/Li3PO4_mp-13725.cif')\n",
     "og.generate_neb('Li', r=3)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- To generate an alloy supercell with multiple components based on a template supercell, you can use the `substitutions_random()` method to randomly replace the atom in the supercell with other atoms at specific proportions."
    ]
   },
   {
@@ -82,7 +122,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calculation of the RDF of a structure"
+    "- To extract dynamics data from VASP OUTCAR files, there is an option to rely only on the available `OUTCAR` file, with the assumption that the first line of the `POSCAR` in the calculation had the correct assignment of species, and that there was not too many of them. However, it is better to obtain the species from the `POSCAR` file used in the calculation. So typically, one should provide both files to the `Outcar` class using the `poscar_file` parameter in the constructor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from oganesson.io.vasp import Outcar\n",
+    "\n",
+    "outcar = Outcar('examples/')\n",
+    "outcar.write_md_data()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculation of the structural properties\n",
+    "\n",
+    "- You can obtain the radial distribution fuction (RDF) using the `rdf()` function, which is borrowed from the ASE library."
    ]
   },
   {
@@ -98,6 +159,28 @@
     "structure = OgStructure(Cu.repeat([4,4,4]))\n",
     "structure.substitutions_random('Cu',{'Al':16, 'Cr':16, 'Ti':16, 'V':16})\n",
     "print(structure.get_rdf(rmax=4,nbins=100,elements=[13,13])[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- You can plot the simulated XRD for your structure using the `xrd()` function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from oganesson.ogstructure import OgStructure\n",
+    "from ase.build import bulk\n",
+    "\n",
+    "Cu = bulk('Cu', 'fcc', a=3.6)\n",
+    "structure = OgStructure(Cu.repeat([4,4,4]))\n",
+    "structure.substitutions_random('Cu',{'Al':16, 'Cr':16, 'Ti':16, 'V':16})\n",
+    "structure.xrd()"
    ]
   },
   {
@@ -163,7 +246,6 @@
     "from oganesson.descriptors import Describe, BACD\n",
     "from oganesson.ogstructure import OgStructure\n",
     "from pymatgen.core.structure import Structure\n",
-    "from joltml import Experiment, Xgboost, Sklearn\n",
     "import pandas as pd\n",
     "\n",
     "headers = {\n",
@@ -188,50 +270,11 @@
    "outputs": [],
    "source": [
     "\n",
-    "import numpy as np\n",
+    "from joltml import Experiment, Xgboost, Sklearn\n",
+    "\n",
     "training_set = pd.DataFrame(datasets['bacd'])\n",
     "experiment = Experiment(training_set.iloc[:800])\n",
-    "y = experiment.add_models([Xgboost()]).regression(targets=pd.DataFrame(datasets['formation_energy_per_atom'][:800]), splits=[0.8,0.2]).predict(training_set.iloc[:800])\n",
-    "\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To extract dynamics data from VASP OUTCAR files, there is an option to rely only on the available `OUTCAR` file, with the assumption that the first line of the `POSCAR` in the calculation had the correct assignment of species, and that there was not too many of them."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from oganesson.io.vasp import Outcar\n",
-    "\n",
-    "outcar = Outcar('examples/')\n",
-    "outcar.write_md_data()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "However, it is better to obtain the species from the `POSCAR` file used in the calculation. So typically, one should provide both files to the `Outcar` class."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "## Test sensitivity of descriptors\n",
-    "\n",
-    "## Test translational and rotational symmetry of descriptors\n"
+    "y = experiment.add_models([Xgboost()]).regression(targets=pd.DataFrame(datasets['formation_energy_per_atom'][:800]), splits=[0.8,0.2]).predict(training_set.iloc[:800])"
    ]
   },
   {
@@ -378,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
