--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -5,7 +5,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial overview\n",
+    "# `oganesson` tutorial\n",
+    "\n",
+    "`oganesson` helps material scientists generate, modify, analyze and featurize structures, create structure datasets, create nudged elastic bands diffusion pathways along with `VASP` input files, and evolve structures using ML structure optimizers.\n",
     "\n",
     "## Structural manipulation and preparation"
    ]
@@ -190,7 +192,11 @@
    "source": [
     "# Machine learning\n",
     "\n",
-    "## Machine learning descriptors"
+    "`oganesson` supports machine learning workflows by providing quick and easy tools to generate machine learning descriptors for materials.\n",
+    "\n",
+    "## Machine learning descriptors\n",
+    "\n",
+    "The following demonstrates how to convert a `CIF` file to a descriptor vector using the `BACD` descriptors and the `SineMatrix` features from `DScribe`:"
    ]
   },
   {
@@ -199,33 +205,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from oganesson.descriptors import BACD, SymmetryFunctions, DScribeSOAP, DScribeSineMatrix\n",
+    "from oganesson.descriptors import BACD, DScribeSineMatrix\n",
     "from oganesson.ogstructure import OgStructure\n",
     "\n",
-    "\n",
-    "bacd = BACD(OgStructure(file_name='examples/structures/mp-541001_LiInI4.cif'))\n",
-    "bacd.describe()\n",
-    "\n",
-    "sf = DScribeSineMatrix(OgStructure(file_name='examples/structures/mp-541001_LiInI4.cif'))\n",
-    "sf.describe()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from oganesson.descriptors import BACD, Describe\n",
-    "# from oganesson.descriptors import DScribeSOAP, DscribeACSF\n",
-    "from oganesson.ogstructure import OgStructure\n",
     "\n",
     "bacd = BACD(OgStructure(file_name='examples/structures/Li3PO4_mp-13725.cif'))\n",
     "print(bacd.describe())\n",
-    "# soap = DScribeSOAP(OgStructure(file_name='examples/structures/Li3PO4_mp-13725.cif'))\n",
-    "# acsf = DscribeACSF(OgStructure(file_name='examples/structures/Li3PO4_mp-13725.cif'))\n",
     "\n",
-    "print(Describe.describe(OgStructure(file_name='examples/structures/Li3PO4_mp-13725.cif'),BACD))"
+    "sf = DScribeSineMatrix(OgStructure(file_name='examples/structures/Li3PO4_mp-13725.cif'))\n",
+    "print(sf.describe())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from oganesson.descriptors import BACD\n",
+    "from oganesson.ogstructure import OgStructure\n",
+    "bacd = BACD(OgStructure(file_name='examples/structures/Li3PO4_mp-13725.cif'))\n",
+    "print(bacd.is_invariant())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To make sure that the descriptors are indeed equivariant (invariant with respect to translation, rotation and substitution), here is a test."
    ]
   },
   {
@@ -233,7 +240,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generation of machine learning datasets"
+    "## Generation of machine learning datasets\n",
+    "\n",
+    "If you need to featurize materials in bulk, here is an example of how to do that. The code extracts perovskite materials from the Materials Project database via an API request. Note: the API key is hidden."
    ]
   },
   {
@@ -250,7 +259,7 @@
     "\n",
     "headers = {\n",
     "    'accept': 'application/json',\n",
-    "    'X-API-KEY': 'iGRUQOIQAcPMw00QWQKIEegfhF8O7Gmm'\n",
+    "    'X-API-KEY': 'XXXXXXXXXXXXXXXXX'\n",
     "}\n",
     "materials_summary = requests.get('https://api.materialsproject.org/materials/summary/?formula=ABO3&deprecated=false&_per_page=1000&_skip=0&_limit=1000&_all_fields=true&is_stable=true', headers=headers)\n",
     "materials_summary = materials_summary.json()['data']\n",
@@ -264,17 +273,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\n",
-    "from joltml import Experiment, Xgboost, Sklearn\n",
-    "\n",
-    "training_set = pd.DataFrame(datasets['bacd'])\n",
-    "experiment = Experiment(training_set.iloc[:800])\n",
-    "y = experiment.add_models([Xgboost()]).regression(targets=pd.DataFrame(datasets['formation_energy_per_atom'][:800]), splits=[0.8,0.2]).predict(training_set.iloc[:800])"
+    "We can now use the dataset to train an `Xgboost` ML model to predict the formation energy per atom (the only target quantity we have extracted above). The following code demonstrates how to perform such training using the `joltml` package. You will notice that with such a limited dataset, the prediction results are pretty good. The results are logged in the `jolt_lab` folder."
    ]
   },
   {
@@ -283,10 +285,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from oganesson.descriptors import BACD\n",
-    "from oganesson.ogstructure import OgStructure\n",
-    "bacd = BACD(OgStructure(file_name='examples/structures/Li3PO4_mp-13725.cif'))\n",
-    "print(bacd.is_invariant())"
+    "\n",
+    "from joltml import Experiment, Xgboost\n",
+    "\n",
+    "training_set = pd.DataFrame(datasets['bacd'])\n",
+    "experiment = Experiment(training_set.iloc[:800],experiment_id='bacd')\n",
+    "y = experiment.add_models([Xgboost()]).regression(targets=pd.DataFrame(datasets['formation_energy_per_atom'][:800]), splits=[0.8,0.2]).predict(training_set.iloc[:800])"
    ]
   },
   {
@@ -296,7 +300,9 @@
    "source": [
     "# Performing AIMD simulations\n",
     "\n",
-    "Here we apply a lithium-rich material, Li3PO4, to a temperature of 1000 K, and then calculate the diffusivities of the three elements."
+    "Here we subject a lithium-rich material, Li3PO4, to a temperature of 1000 K, and then calculate the diffusivities of the three elements. `m3gnet` is applied as the ML structure optimizer, and is currently not reliable for AIMD simulations. More work is currently being done to build better ML optimizers.\n",
+    "\n",
+    "The following example performs 1000 steps AIMD simulation with LGPS, and then computes the diffusivity of the elements using the `diffusivity` package."
    ]
   },
   {
@@ -309,51 +315,7 @@
     "structure = OgStructure(file_name='examples/structures/LGPS_ChemMater_2018_30_4995_Opt.cif')\n",
     "structure.simulate(temperature=1000,steps=1000,loginterval=1)\n",
     "coeffs = structure.calculate_diffusivity()\n",
-    "print('Diffusion coefficients:', coeffs)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Surface science"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ase.build import fcc111, add_adsorbate\n",
-    "from ase import Atoms\n",
-    "from ase.constraints import FixAtoms\n",
-    "from ase.build import molecule\n",
-    "from oganesson.ogstructure import OgStructure\n",
-    "CO = molecule('CO')\n",
-    "E_CO = -14.77576957\n",
-    "\n",
-    "Pt = fcc111('Pt', (2, 2, 6),periodic=True)\n",
-    "Pt.write('Pt.cif')\n",
-    "# fixed = list(range(len(Pt) - 2*4))\n",
-    "# Pt.constraints = [FixAtoms(indices=fixed)]\n",
-    "ogPt = OgStructure(Pt)\n",
-    "ogPt.relax()\n",
-    "E_Pt = ogPt.total_energy\n",
-    "\n",
-    "add_adsorbate(Pt, CO, height=1.0, position='fcc',mol_index=0)\n",
-    "Pt.center(vacuum=10.0, axis=2)\n",
-    "Pt.write('Pt_CO.cif')\n",
-    "# fixed = list(range(len(Pt) - len(CO) - 2*4))\n",
-    "# Pt.constraints = [FixAtoms(indices=fixed)]\n",
-    "ogPt = OgStructure(Pt)\n",
-    "ogPt.relax()\n",
-    "ogPt.structure.to('Pt_CO_relaxed.cif','cif')\n",
-    "E_Pt_CO = ogPt.total_energy\n",
-    "\n",
-    "# Find the binding energy\n",
-    "print('CO binding energy =',E_Pt_CO - E_Pt - E_CO)\n",
-    "print(E_Pt_CO, E_Pt, E_CO)"
+    "print('Diffusion coefficients:', coeffs)"
    ]
   },
   {
@@ -363,7 +325,9 @@
    "source": [
     "# Genetic algorithms\n",
     "\n",
-    "## Creating a population of materials, and performing evolutions"
+    "Using `m3gnet` as a structure optimizer as well as a calculator for the fitness function (which is the value of the optimized total energy of a structure), `oganesson` generates structure populations based on the `ase.ga` library. The following examples shows how the equilibrium structure of NaH can be found. All what is needed is: identify the number of species, create a `GA` object, and call `evolve()`.\n",
+    "\n",
+    "First, we create the initial population. Note, this will not relax any structure yet."
    ]
   },
   {
@@ -373,7 +337,22 @@
    "outputs": [],
    "source": [
     "from oganesson.genetic_algorithms import GA\n",
-    "ga = GA(species=['Na']*4 + ['H']*4, rmax=20, population_size=10)\n",
+    "ga = GA(species=['Na']*4 + ['H']*4, rmax=20, population_size=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, you evolve the population."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for i in range(10):\n",
     "    ga.evolve(num_offsprings=5)"
    ]
@@ -383,7 +362,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evolving based on a given population"
+    "You can also create your own random population and evolve it. For example, you can use the `substitutions()` method in `OgStructure` to create candidate alloy materials based a specific mix of elements in a given crystal structure, and then evolve that population."
    ]
   },
   {
@@ -421,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4
  },
