--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -143,6 +143,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "A very handy method in OgStructure is the `create_ripple()` method that enables you to generate a sinusoidal 2D structure if your `OgStructure` is the unit cell of a 2D material. The argument `strain` lets you specify how much lateral strain is applied to the sheet that will force it to buckle.\n",
+    "\n",
+    "If you run `create_ripple()` with `relax=False`, it will generate a quick wave structure by moving the atoms to positions along a sine graph. This can be OK for flat 2D materials like graphene, but not for buckled ones like MoS2. In the latter case, it is better to call `create_ripple()` with `relax=True`. This will trigger the relaxation of intermediate structures using the m3gnet optimizer. You can set the number of intermediate structures via the argument `steps`.\n",
+    "\n",
+    "If you want to observe the intermediate structures, you can set `write_intermediate=True`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from oganesson.ogstructure import OgStructure\n",
+    "\n",
+    "MoS2 = OgStructure(file_name='examples/structures/MoS2.vasp')\n",
+    "MoS2 = MoS2.create_ripple(axis='x',units=30,strain=0.8,steps=10,relax=True)\n",
+    "MoS2().to('MoS2ripple_relaxed.cif')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Calculation of the structural properties\n",
     "\n",
     "- You can obtain the radial distribution fuction (RDF) using the `rdf()` function, which is borrowed from the ASE library."
@@ -259,7 +283,7 @@
     "\n",
     "headers = {\n",
     "    'accept': 'application/json',\n",
-    "    'X-API-KEY': 'XXXXXXXXXXXXXXXXX'\n",
+    "    'X-API-KEY': 'iGRUQOIQAcPMw00QWQKIEegfhF8O7Gmm'\n",
     "}\n",
     "materials_summary = requests.get('https://api.materialsproject.org/materials/summary/?formula=ABO3&deprecated=false&_per_page=1000&_skip=0&_limit=1000&_all_fields=true&is_stable=true', headers=headers)\n",
     "materials_summary = materials_summary.json()['data']\n",
